Updated sbt plugins and migrate away from bintray